# Taliyah

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  README.md  config.sample.toml  rustfmt.toml
.github/workflows/: audit-project.yml  check-project.yml
src/: config.rs  data.rs  main.rs
src/commands/: mod.rs
src/commands/fun/: xkcd.rs
src/commands/search/tmdb/: mod.rs
src/commands/utilities/: mod.rs
src/listeners/: handler.rs
src/models/: mod.rs
src/models/tmdb/: mod.rs
src/utils/: locale.rs  mod.rs
