[package]
name                = "taliyah"
version             = "0.7.0-alpha"
authors             = ["Evelyn Harthbrooke"]
description         = "A Discord bot written in Rust with Serenity."
homepage            = "https://github.com/evelynharthbrooke/taliyah"
repository          = "https://github.com/evelynharthbrooke/taliyah.git"
keywords            = ["discord", "discord-api", "bot", "serenity"]
edition             = "2021"
license             = "MIT"
readme              = "README.md"
include             = ["src/**/*", "config.sample.toml", "Cargo.toml", "README.md"]

[dependencies]
anyhow              = "1.0.53"
aspotify            = "0.7.1"
byte-unit           = "4.0.13"
chrono              = "0.4.19"
humantime           = "2.1.0"
itertools           = "0.10.3"
lastfm-rs           = "0.5.0"
poise               = "0.6.1"
serde               = { version = "1.0.203", features = ["derive"] }
serde_json          = "1.0.117"
tokio               = { version = "1.38.0", features = ["full"] }
toml                = "0.5.8"

[dependencies.reqwest]
version             = "0.11.12"
default-features    = false
features            = ["json", "multipart", "stream", "rustls-tls"]
