[package]
name                = "taliyah"
version             = "0.7.0-alpha"
authors             = ["Evelyn Harthbrooke"]
description         = "A Discord bot written in Rust with Serenity."
homepage            = "https://github.com/evelynharthbrooke/taliyah"
repository          = "https://github.com/evelynharthbrooke/taliyah.git"
keywords            = ["discord", "discord-api", "bot", "serenity"]
edition             = "2021"
license             = "MIT"
readme              = "README.md"
include             = ["src/**/*", "config.sample.toml", "Cargo.toml", "README.md"]

[dependencies]
anyhow              = "1.0.86"
byte-unit           = "5.1.4"
chrono              = "0.4.38"
humantime           = "2.1.0"
itertools           = "0.13.0"
poise               = "0.6.1"
rand                = "0.8.5"
reqwest             = { version = "0.12.5", default-features = false, features = ["json", "multipart", "stream", "rustls-tls"]}
rspotify            = "0.13.2"
serenity            = "0.12.2"
serde               = { version = "1.0.208", features = ["derive"] }
serde_json          = "1.0.125"
tokio               = { version = "1.39.3", features = ["full"] }
toml                = "0.8.19"
tracing             = "0.1.40"
tracing-futures     = "0.2.5"
tracing-log         = "0.2.0"
tracing-subscriber  = { version = "0.3.18", features = ["env-filter"] }
